@@ -63,11 +63,11 @@ class Part {
       const QList<StaffNameDoc>& longNames(int tick = 0) const  { return instr(tick)->longNames();  }
       const QList<StaffNameDoc>& shortNames(int tick = 0) const { return instr(tick)->shortNames(); }
 
-      void setLongName(const QTextDocumentFragment& s, int tick = 0);
-      void setShortName(const QTextDocumentFragment& s, int tick = 0);
+      void setLongNames(QList<StaffNameDoc>& s, int tick = 0);
+      void setShortNames(QList<StaffNameDoc>& s, int tick = 0);
 
-      void setLongName(const QString& s)  { setLongName(QTextDocumentFragment::fromPlainText(s)); }
-      void setShortName(const QString& s) { setShortName(QTextDocumentFragment::fromPlainText(s)); }
+      void setLongName(const QString& s);
+      void setShortName(const QString& s);
 
       void setStaves(int);
 
