@@ -49,7 +49,6 @@ TextPalette* textPalette;
 Text::Text(Score* s)
    : Element(s)
       {
-      _useSelectionColor = false;
       _doc = new QTextDocument(0);
       _doc->setDocumentMargin(1.0);
       _doc->setUseDesignMetrics(true);
@@ -74,7 +73,6 @@ Text::Text(Score* s)
 Text::Text(const Text& e)
    : Element(e)
       {
-      _useSelectionColor    = e._useSelectionColor;
       _doc                  = e._doc->clone();
       frame                 = e.frame;
       _styled               = e._styled;
@@ -409,7 +407,7 @@ void Text::draw(Painter* painter) const
             c.cursorPosition = cursor->position();
             }
       QColor color;
-      if (_useSelectionColor && !(score() && score()->printing())) {
+      if (!painter->view()->editMode() && !(score() && score()->printing())) {
             color = QColor(
                (selected() && !(score() && score()->printing()))
                ? preferences.selectColor[0] : style().foregroundColor());
